--- a/sass/elements/icon.sass
+++ b/sass/elements/icon.sass
@@ -1,3 +1,5 @@
+@use "../utilities/mixins"
+  
 $icon-dimensions: 1.5rem !default
 $icon-dimensions-small: 1rem !default
 $icon-dimensions-medium: 2rem !default
@@ -32,14 +34,14 @@ $icon-text-spacing: 0.25em !default
     flex-grow: 0
     flex-shrink: 0
     &:not(:last-child)
-      +ltr
+      +mixins.ltr
         margin-right: $icon-text-spacing
-      +rtl
+      +mixins.rtl
         margin-left: $icon-text-spacing
     &:not(:first-child)
-      +ltr
+      +mixins.ltr
         margin-left: $icon-text-spacing
-      +rtl
+      +mixins.rtl
         margin-right: $icon-text-spacing
 
 div.icon-text
