--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables"
+@use "../utilities/mixins"
+@use "../utilities/extends"
 
 $dimensions: 16 24 32 48 64 96 128 !default
 
@@ -10,7 +12,7 @@ $dimensions: 16 24 32 48 64 96 128 !default
     height: auto
     width: 100%
     &.is-rounded
-      border-radius: $radius-rounded
+      border-radius: initial-variables.$radius-rounded
   &.is-fullwidth
     width: 100%
   // Ratio
