--- a/sass/elements/other.sass
+++ b/sass/elements/other.sass
@@ -1,4 +1,6 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables"
+@use "../utilities/derived-variables"
+@use "../utilities/extends"
 
 .block
   @extend %block
@@ -18,10 +20,10 @@
 
 .number
   align-items: center
-  background-color: $background
-  border-radius: $radius-rounded
+  background-color: derived-variables.$background
+  border-radius: initial-variables.$radius-rounded
   display: inline-flex
-  font-size: $size-medium
+  font-size: derived-variables.$size-medium
   height: 2em
   justify-content: center
   margin-right: 1.5rem
