--- a/sass/helpers/float.sass
+++ b/sass/helpers/float.sass
@@ -1,7 +1,7 @@
-@import "../utilities/mixins"
+@use "../utilities/mixins"
 
 .is-clearfix
-  +clearfix
+  +mixins.clearfix
 
 .is-pulled-left
   float: left !important
