--- a/sass/helpers/visibility.sass
+++ b/sass/helpers/visibility.sass
@@ -1,35 +1,35 @@
-@import "../utilities/mixins"
+@use "../utilities/mixins"
 
 $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
 
 @each $display in $displays
   .is-#{$display}
     display: #{$display} !important
-  +mobile
+  +mixins.mobile
     .is-#{$display}-mobile
       display: #{$display} !important
-  +tablet
+  +mixins.tablet
     .is-#{$display}-tablet
       display: #{$display} !important
-  +tablet-only
+  +mixins.tablet-only
     .is-#{$display}-tablet-only
       display: #{$display} !important
-  +touch
+  +mixins.touch
     .is-#{$display}-touch
       display: #{$display} !important
-  +desktop
+  +mixins.desktop
     .is-#{$display}-desktop
       display: #{$display} !important
-  +desktop-only
+  +mixins.desktop-only
     .is-#{$display}-desktop-only
       display: #{$display} !important
-  +widescreen
+  +mixins.widescreen
     .is-#{$display}-widescreen
       display: #{$display} !important
-  +widescreen-only
+  +mixins.widescreen-only
     .is-#{$display}-widescreen-only
       display: #{$display} !important
-  +fullhd
+  +mixins.fullhd
     .is-#{$display}-fullhd
       display: #{$display} !important
 
@@ -46,77 +46,77 @@ $displays: 'block' 'flex' 'inline' 'inline-block' 'inline-flex'
   white-space: nowrap !important
   width: 0.01em !important
 
-+mobile
++mixins.mobile
   .is-hidden-mobile
     display: none !important
 
-+tablet
++mixins.tablet
   .is-hidden-tablet
     display: none !important
 
-+tablet-only
++mixins.tablet-only
   .is-hidden-tablet-only
     display: none !important
 
-+touch
++mixins.touch
   .is-hidden-touch
     display: none !important
 
-+desktop
++mixins.desktop
   .is-hidden-desktop
     display: none !important
 
-+desktop-only
++mixins.desktop-only
   .is-hidden-desktop-only
     display: none !important
 
-+widescreen
++mixins.widescreen
   .is-hidden-widescreen
     display: none !important
 
-+widescreen-only
++mixins.widescreen-only
   .is-hidden-widescreen-only
     display: none !important
 
-+fullhd
++mixins.fullhd
   .is-hidden-fullhd
     display: none !important
 
 .is-invisible
   visibility: hidden !important
 
-+mobile
++mixins.mobile
   .is-invisible-mobile
     visibility: hidden !important
 
-+tablet
++mixins.tablet
   .is-invisible-tablet
     visibility: hidden !important
 
-+tablet-only
++mixins.tablet-only
   .is-invisible-tablet-only
     visibility: hidden !important
 
-+touch
++mixins.touch
   .is-invisible-touch
     visibility: hidden !important
 
-+desktop
++mixins.desktop
   .is-invisible-desktop
     visibility: hidden !important
 
-+desktop-only
++mixins.desktop-only
   .is-invisible-desktop-only
     visibility: hidden !important
 
-+widescreen
++mixins.widescreen
   .is-invisible-widescreen
     visibility: hidden !important
 
-+widescreen-only
++mixins.widescreen-only
   .is-invisible-widescreen-only
     visibility: hidden !important
 
-+fullhd
++mixins.fullhd
   .is-invisible-fullhd
     visibility: hidden !important
