--- a/sass/layout/footer.sass
+++ b/sass/layout/footer.sass
@@ -1,6 +1,6 @@
-@import "../utilities/derived-variables"
+@use "../utilities/derived-variables"
 
-$footer-background-color: $scheme-main-bis !default
+$footer-background-color: derived-variables.$scheme-main-bis !default
 $footer-color: false !default
 $footer-padding: 3rem 1.5rem 6rem !default
 
