--- a/sass/layout/section.sass
+++ b/sass/layout/section.sass
@@ -1,4 +1,4 @@
-@import "../utilities/mixins"
+@use "../utilities/mixins"
 
 $section-padding: 3rem 1.5rem !default
 $section-padding-desktop: 3rem 3rem !default
@@ -8,7 +8,7 @@ $section-padding-large: 18rem 6rem !default
 .section
   padding: $section-padding
   // Responsiveness
-  +desktop
+  +mixins.desktop
     padding: $section-padding-desktop
     // Sizes
     &.is-medium
