--- a/sass/utilities/controls.sass
+++ b/sass/utilities/controls.sass
@@ -1,7 +1,8 @@
-@import "derived-variables"
+@use "initial-variables"
+@use "derived-variables"
 
-$control-radius: $radius !default
-$control-radius-small: $radius-small !default
+$control-radius: initial-variables.$radius !default
+$control-radius-small: initial-variables.$radius-small !default
 
 $control-border-width: 1px !default
 
@@ -19,7 +20,7 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width}) !default
   border-radius: $control-radius
   box-shadow: none
   display: inline-flex
-  font-size: $size-normal
+  font-size: derived-variables.$size-normal
   height: $control-height
   justify-content: flex-start
   line-height: $control-line-height
@@ -42,8 +43,8 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width}) !default
 // The controls sizes use mixins so they can be used at different breakpoints
 =control-small
   border-radius: $control-radius-small
-  font-size: $size-small
+  font-size: derived-variables.$size-small
 =control-medium
-  font-size: $size-medium
+  font-size: derived-variables.$size-medium
 =control-large
-  font-size: $size-large
+  font-size: derived-variables.$size-large
