--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -1,71 +1,71 @@
-@import "initial-variables"
-@import "functions"
+@use "initial-variables"
+@use "functions"
 
-$primary: $turquoise !default
+$primary: initial-variables.$turquoise !default
 
-$info: $cyan !default
-$success: $green !default
-$warning: $yellow !default
-$danger: $red !default
+$info: initial-variables.$cyan !default
+$success: initial-variables.$green !default
+$warning: initial-variables.$yellow !default
+$danger: initial-variables.$red !default
 
-$light: $white-ter !default
-$dark: $grey-darker !default
+$light: initial-variables.$white-ter !default
+$dark: initial-variables.$grey-darker !default
 
 // Invert colors
 
-$orange-invert: findColorInvert($orange) !default
-$yellow-invert: findColorInvert($yellow) !default
-$green-invert: findColorInvert($green) !default
-$turquoise-invert: findColorInvert($turquoise) !default
-$cyan-invert: findColorInvert($cyan) !default
-$blue-invert: findColorInvert($blue) !default
-$purple-invert: findColorInvert($purple) !default
-$red-invert: findColorInvert($red) !default
+$orange-invert: functions.findColorInvert(initial-variables.$orange) !default
+$yellow-invert: functions.findColorInvert(initial-variables.$yellow) !default
+$green-invert: functions.findColorInvert(initial-variables.$green) !default
+$turquoise-invert: functions.findColorInvert(initial-variables.$turquoise) !default
+$cyan-invert: functions.findColorInvert(initial-variables.$cyan) !default
+$blue-invert: functions.findColorInvert(initial-variables.$blue) !default
+$purple-invert: functions.findColorInvert(initial-variables.$purple) !default
+$red-invert: functions.findColorInvert(initial-variables.$red) !default
 
-$primary-invert: findColorInvert($primary) !default
-$primary-light: findLightColor($primary) !default
-$primary-dark: findDarkColor($primary) !default
-$info-invert: findColorInvert($info) !default
-$info-light: findLightColor($info) !default
-$info-dark: findDarkColor($info) !default
-$success-invert: findColorInvert($success) !default
-$success-light: findLightColor($success) !default
-$success-dark: findDarkColor($success) !default
-$warning-invert: findColorInvert($warning) !default
-$warning-light: findLightColor($warning) !default
-$warning-dark: findDarkColor($warning) !default
-$danger-invert: findColorInvert($danger) !default
-$danger-light: findLightColor($danger) !default
-$danger-dark: findDarkColor($danger) !default
-$light-invert: findColorInvert($light) !default
-$dark-invert: findColorInvert($dark) !default
+$primary-invert: functions.findColorInvert($primary) !default
+$primary-light: functions.findLightColor($primary) !default
+$primary-dark: functions.findDarkColor($primary) !default
+$info-invert: functions.findColorInvert($info) !default
+$info-light: functions.findLightColor($info) !default
+$info-dark: functions.findDarkColor($info) !default
+$success-invert: functions.findColorInvert($success) !default
+$success-light: functions.findLightColor($success) !default
+$success-dark: functions.findDarkColor($success) !default
+$warning-invert: functions.findColorInvert($warning) !default
+$warning-light: functions.findLightColor($warning) !default
+$warning-dark: functions.findDarkColor($warning) !default
+$danger-invert: functions.findColorInvert($danger) !default
+$danger-light: functions.findLightColor($danger) !default
+$danger-dark: functions.findDarkColor($danger) !default
+$light-invert: functions.findColorInvert($light) !default
+$dark-invert: functions.findColorInvert($dark) !default
 
 // General colors
 
-$scheme-main: $white !default
-$scheme-main-bis: $white-bis !default
-$scheme-main-ter: $white-ter !default
-$scheme-invert: $black !default
-$scheme-invert-bis: $black-bis !default
-$scheme-invert-ter: $black-ter !default
+$scheme-main: initial-variables.$white !default
+$scheme-main-bis: initial-variables.$white-bis !default
+$scheme-main-ter: initial-variables.$white-ter !default
+$scheme-invert: initial-variables.$black !default
+$scheme-invert-bis: initial-variables.$black-bis !default
+$scheme-invert-ter: initial-variables.$black-ter !default
 
-$background: $white-ter !default
+$background: initial-variables.$white-ter !default
 
-$border: $grey-lighter !default
-$border-hover: $grey-light !default
-$border-light: $grey-lightest !default
-$border-light-hover: $grey-light !default
+$border: initial-variables.$grey-lighter !default
+$border-hover: initial-variables.$grey-light !default
+$border-light: initial-variables.$grey-lightest !default
+$border-light-hover: initial-variables.$grey-light !default
 
 // Text colors
 
-$text: $grey-dark !default
-$text-invert: findColorInvert($text) !default
-$text-light: $grey !default
-$text-strong: $grey-darker !default
+$text: initial-variables.$grey-dark !default
+$text-invert: functions.findColorInvert($text) !default
+$text-light: initial-variables.$grey !default
+$text-strong: initial-variables.$grey-darker !default
 
 // Code colors
 
-$code: darken($red, 15%) !default
+$code: darken(initial-variables.$red, 15%) !default
 $code-background: $background !default
 
 $pre: $text !default
@@ -73,31 +73,31 @@ $pre-background: $background !default
 
 // Link colors
 
-$link: $blue !default
-$link-invert: findColorInvert($link) !default
-$link-light: findLightColor($link) !default
-$link-dark: findDarkColor($link) !default
-$link-visited: $purple !default
+$link: initial-variables.$blue !default
+$link-invert: functions.findColorInvert($link) !default
+$link-light: functions.findLightColor($link) !default
+$link-dark: functions.findDarkColor($link) !default
+$link-visited: initial-variables.$purple !default
 
-$link-hover: $grey-darker !default
-$link-hover-border: $grey-light !default
+$link-hover: initial-variables.$grey-darker !default
+$link-hover-border: initial-variables.$grey-light !default
 
-$link-focus: $grey-darker !default
-$link-focus-border: $blue !default
+$link-focus: initial-variables.$grey-darker !default
+$link-focus-border: initial-variables.$blue !default
 
-$link-active: $grey-darker !default
-$link-active-border: $grey-dark !default
+$link-active: initial-variables.$grey-darker !default
+$link-active-border: initial-variables.$grey-dark !default
 
 // Typography
 
-$family-primary: $family-sans-serif !default
-$family-secondary: $family-sans-serif !default
-$family-code: $family-monospace !default
+$family-primary: initial-variables.$family-sans-serif !default
+$family-secondary: initial-variables.$family-sans-serif !default
+$family-code: initial-variables.$family-monospace !default
 
-$size-small: $size-7 !default
-$size-normal: $size-6 !default
-$size-medium: $size-5 !default
-$size-large: $size-4 !default
+$size-small: initial-variables.$size-7 !default
+$size-normal: initial-variables.$size-6 !default
+$size-medium: initial-variables.$size-5 !default
+$size-large: initial-variables.$size-4 !default
 
 // Effects
 
@@ -107,8 +107,8 @@ $shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0px 0 1px rgba($schem
 $custom-colors: null !default
 $custom-shades: null !default
 
-$colors: mergeColorMaps(("white": ($white, $black), "black": ($black, $white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert, $primary-light, $primary-dark), "link": ($link, $link-invert, $link-light, $link-dark), "info": ($info, $info-invert, $info-light, $info-dark), "success": ($success, $success-invert, $success-light, $success-dark), "warning": ($warning, $warning-invert, $warning-light, $warning-dark), "danger": ($danger, $danger-invert, $danger-light, $danger-dark)), $custom-colors) !default
+$colors: functions.mergeColorMaps(("white": (initial-variables.$white, initial-variables.$black), "black": (initial-variables.$black, initial-variables.$white), "light": ($light, $light-invert), "dark": ($dark, $dark-invert), "primary": ($primary, $primary-invert, $primary-light, $primary-dark), "link": ($link, $link-invert, $link-light, $link-dark), "info": ($info, $info-invert, $info-light, $info-dark), "success": ($success, $success-invert, $success-light, $success-dark), "warning": ($warning, $warning-invert, $warning-light, $warning-dark), "danger": ($danger, $danger-invert, $danger-light, $danger-dark)), $custom-colors) !default
 
-$shades: mergeColorMaps(("black-bis": $black-bis, "black-ter": $black-ter, "grey-darker": $grey-darker, "grey-dark": $grey-dark, "grey": $grey, "grey-light": $grey-light, "grey-lighter": $grey-lighter, "white-ter": $white-ter, "white-bis": $white-bis), $custom-shades) !default
+$shades: functions.mergeColorMaps(("black-bis": initial-variables.$black-bis, "black-ter": initial-variables.$black-ter, "grey-darker": initial-variables.$grey-darker, "grey-dark": initial-variables.$grey-dark, "grey": initial-variables.$grey, "grey-light": initial-variables.$grey-light, "grey-lighter": initial-variables.$grey-lighter, "white-ter": initial-variables.$white-ter, "white-bis": initial-variables.$white-bis), $custom-shades) !default
 
-$sizes: $size-1 $size-2 $size-3 $size-4 $size-5 $size-6 $size-7 !default
+$sizes: initial-variables.$size-1 initial-variables.$size-2 initial-variables.$size-3 initial-variables.$size-4 initial-variables.$size-5 initial-variables.$size-6 initial-variables.$size-7 !default
