--- a/sass/utilities/extends.sass
+++ b/sass/utilities/extends.sass
@@ -1,25 +1,26 @@
-@import "mixins"
+@use "controls"
+@use "mixins"
 
 %control
-  +control
+  +controls.control
 
 %unselectable
-  +unselectable
+  +mixins.unselectable
 
 %arrow
-  +arrow
+  +mixins.arrow
 
 %block
-  +block
+  +mixins.block
 
 %delete
-  +delete
+  +mixins.delete
 
 %loader
-  +loader
+  +mixins.loader
 
 %overlay
-  +overlay
+  +mixins.overlay
 
 %reset
-  +reset
+  +mixins.reset
