--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -1,23 +1,25 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables"
+@use "../utilities/derived-variables"
+@use "../utilities/mixins"
 
 $dropdown-menu-min-width: 12rem !default
 
-$dropdown-content-background-color: $scheme-main !default
-$dropdown-content-arrow: $link !default
+$dropdown-content-background-color: derived-variables.$scheme-main !default
+$dropdown-content-arrow: derived-variables.$link !default
 $dropdown-content-offset: 4px !default
 $dropdown-content-padding-bottom: 0.5rem !default
 $dropdown-content-padding-top: 0.5rem !default
-$dropdown-content-radius: $radius !default
-$dropdown-content-shadow: $shadow !default
+$dropdown-content-radius: initial-variables.$radius !default
+$dropdown-content-shadow: derived-variables.$shadow !default
 $dropdown-content-z: 20 !default
 
-$dropdown-item-color: $text !default
-$dropdown-item-hover-color: $scheme-invert !default
-$dropdown-item-hover-background-color: $background !default
-$dropdown-item-active-color: $link-invert !default
-$dropdown-item-active-background-color: $link !default
+$dropdown-item-color: derived-variables.$text !default
+$dropdown-item-hover-color: derived-variables.$scheme-invert !default
+$dropdown-item-hover-background-color: derived-variables.$background !default
+$dropdown-item-active-color: derived-variables.$link-invert !default
+$dropdown-item-active-background-color: derived-variables.$link !default
 
-$dropdown-divider-background-color: $border-light !default
+$dropdown-divider-background-color: derived-variables.$border-light !default
 
 .dropdown
   display: inline-flex
@@ -40,7 +42,7 @@ $dropdown-divider-background-color: $border-light !default
 
 .dropdown-menu
   display: none
-  +ltr-position(0, false)
+  +mixins.ltr-position(0, false)
   min-width: $dropdown-menu-min-width
   padding-top: $dropdown-content-offset
   position: absolute
@@ -64,7 +66,7 @@ $dropdown-divider-background-color: $border-light !default
 
 a.dropdown-item,
 button.dropdown-item
-  +ltr-property("padding", 3rem)
+  +mixins.ltr-property("padding", 3rem)
   text-align: inherit
   white-space: nowrap
   width: 100%
