--- a/sass/components/panel.sass
+++ b/sass/components/panel.sass
@@ -1,39 +1,41 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables"
+@use "../utilities/derived-variables"
+@use "../utilities/mixins"
 
-$panel-margin: $block-spacing !default
-$panel-item-border: 1px solid $border-light !default
-$panel-radius: $radius-large !default
-$panel-shadow: $shadow !default
+$panel-margin: initial-variables.$block-spacing !default
+$panel-item-border: 1px solid derived-variables.$border-light !default
+$panel-radius: initial-variables.$radius-large !default
+$panel-shadow: derived-variables.$shadow !default
 
-$panel-heading-background-color: $border-light !default
-$panel-heading-color: $text-strong !default
+$panel-heading-background-color: derived-variables.$border-light !default
+$panel-heading-color: derived-variables.$text-strong !default
 $panel-heading-line-height: 1.25 !default
 $panel-heading-padding: 0.75em 1em !default
-$panel-heading-radius: $radius !default
+$panel-heading-radius: initial-variables.$radius !default
 $panel-heading-size: 1.25em !default
-$panel-heading-weight: $weight-bold !default
+$panel-heading-weight: initial-variables.$weight-bold !default
 
 $panel-tabs-font-size: 0.875em !default
-$panel-tab-border-bottom: 1px solid $border !default
-$panel-tab-active-border-bottom-color: $link-active-border !default
-$panel-tab-active-color: $link-active !default
+$panel-tab-border-bottom: 1px solid derived-variables.$border !default
+$panel-tab-active-border-bottom-color: derived-variables.$link-active-border !default
+$panel-tab-active-color: derived-variables.$link-active !default
 
-$panel-list-item-color: $text !default
-$panel-list-item-hover-color: $link !default
+$panel-list-item-color: derived-variables.$text !default
+$panel-list-item-hover-color: derived-variables.$link !default
 
-$panel-block-color: $text-strong !default
-$panel-block-hover-background-color: $background !default
-$panel-block-active-border-left-color: $link !default
-$panel-block-active-color: $link-active !default
-$panel-block-active-icon-color: $link !default
+$panel-block-color: derived-variables.$text-strong !default
+$panel-block-hover-background-color: derived-variables.$background !default
+$panel-block-active-border-left-color: derived-variables.$link !default
+$panel-block-active-color: derived-variables.$link-active !default
+$panel-block-active-icon-color: derived-variables.$link !default
 
-$panel-icon-color: $text-light !default
-$panel-colors: $colors !default
+$panel-icon-color: derived-variables.$text-light !default
+$panel-colors: derived-variables.$colors !default
 
 .panel
   border-radius: $panel-radius
   box-shadow: $panel-shadow
-  font-size: $size-normal
+  font-size: derived-variables.$size-normal
   &:not(:last-child)
     margin-bottom: $panel-margin
   // Colors
@@ -90,7 +92,7 @@ $panel-colors: $colors !default
   justify-content: flex-start
   padding: 0.5em 0.75em
   input[type="checkbox"]
-    +ltr-property("margin", 0.75em)
+    +mixins.ltr-property("margin", 0.75em)
   & > .control
     flex-grow: 1
     flex-shrink: 1
@@ -113,9 +115,9 @@ label.panel-block
     background-color: $panel-block-hover-background-color
 
 .panel-icon
-  +fa(14px, 1em)
+  +mixins.fa(14px, 1em)
   color: $panel-icon-color
-  +ltr-property("margin", 0.75em)
+  +mixins.ltr-property("margin", 0.75em)
   .fa
     font-size: inherit
     line-height: inherit
