--- a/sass/elements/box.sass
+++ b/sass/elements/box.sass
@@ -1,13 +1,15 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables"
+@use "../utilities/derived-variables"
+@use "../utilities/extends"
 
-$box-color: $text !default
-$box-background-color: $scheme-main !default
-$box-radius: $radius-large !default
-$box-shadow: $shadow !default
+$box-color: derived-variables.$text !default
+$box-background-color: derived-variables.$scheme-main !default
+$box-radius: initial-variables.$radius-large !default
+$box-shadow: derived-variables.$shadow !default
 $box-padding: 1.25rem !default
 
-$box-link-hover-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1), 0 0 0 1px $link !default
-$box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2), 0 0 0 1px $link !default
+$box-link-hover-shadow: 0 0.5em 1em -0.125em rgba(derived-variables.$scheme-invert, 0.1), 0 0 0 1px derived-variables.$link !default
+$box-link-active-shadow: inset 0 1px 2px rgba(derived-variables.$scheme-invert, 0.2), 0 0 0 1px derived-variables.$link !default
 
 .box
   @extend %block
