--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -1,22 +1,25 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables"
+@use "../utilities/derived-variables"
+@use "../utilities/mixins"
+@use "../utilities/extends"
 
-$notification-background-color: $background !default
-$notification-code-background-color: $scheme-main !default
-$notification-radius: $radius !default
+$notification-background-color: derived-variables.$background !default
+$notification-code-background-color: derived-variables.$scheme-main !default
+$notification-radius: initial-variables.$radius !default
 $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 $notification-padding-ltr: 1.25rem 2.5rem 1.25rem 1.5rem !default
 $notification-padding-rtl: 1.25rem 1.5rem 1.25rem 2.5rem !default
 
-$notification-colors: $colors !default
+$notification-colors: derived-variables.$colors !default
 
 .notification
   @extend %block
   background-color: $notification-background-color
   border-radius: $notification-radius
   position: relative
-  +ltr
+  +mixins.ltr
     padding: $notification-padding-ltr
-  +rtl
+  +mixins.rtl
     padding: $notification-padding-rtl
   a:not(.button):not(.dropdown-item)
     color: currentColor
@@ -29,7 +32,7 @@ $notification-colors: $colors !default
   pre code
     background: transparent
   & > .delete
-    +ltr-position(0.5rem)
+    +mixins.ltr-position(0.5rem)
     position: absolute
     top: 0.5rem
   .title,
