--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -1,22 +1,25 @@
-@import "../utilities/mixins"
+@use "../utilities/initial-variables"
+@use "../utilities/derived-variables"
+@use "../utilities/mixins"
+@use "../utilities/extends"
 
-$title-color: $text-strong !default
+$title-color: derived-variables.$text-strong !default
 $title-family: false !default
-$title-size: $size-3 !default
-$title-weight: $weight-semibold !default
+$title-size: initial-variables.$size-3 !default
+$title-weight: initial-variables.$weight-semibold !default
 $title-line-height: 1.125 !default
 $title-strong-color: inherit !default
 $title-strong-weight: inherit !default
 $title-sub-size: 0.75em !default
 $title-sup-size: 0.75em !default
 
-$subtitle-color: $text !default
+$subtitle-color: derived-variables.$text !default
 $subtitle-family: false !default
-$subtitle-size: $size-5 !default
-$subtitle-weight: $weight-normal !default
+$subtitle-size: initial-variables.$size-5 !default
+$subtitle-weight: initial-variables.$weight-normal !default
 $subtitle-line-height: 1.25 !default
-$subtitle-strong-color: $text-strong !default
-$subtitle-strong-weight: $weight-semibold !default
+$subtitle-strong-color: derived-variables.$text-strong !default
+$subtitle-strong-weight: initial-variables.$weight-semibold !default
 $subtitle-negative-margin: -1.25rem !default
 
 .title,
@@ -46,8 +49,8 @@ $subtitle-negative-margin: -1.25rem !default
   &:not(.is-spaced) + .subtitle
     margin-top: $subtitle-negative-margin
   // Sizes
-  @each $size in $sizes
-    $i: index($sizes, $size)
+  @each $size in derived-variables.$sizes
+    $i: index(derived-variables.$sizes, $size)
     &.is-#{$i}
       font-size: $size
 
@@ -64,7 +67,7 @@ $subtitle-negative-margin: -1.25rem !default
   &:not(.is-spaced) + .title
     margin-top: $subtitle-negative-margin
   // Sizes
-  @each $size in $sizes
-    $i: index($sizes, $size)
+  @each $size in derived-variables.$sizes
+    $i: index(derived-variables.$sizes, $size)
     &.is-#{$i}
       font-size: $size
