Scope .icon to direct descendant
.icon is now a direct child of .has-icons-left|right

--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -180,7 +180,7 @@ $label-colors: $form-colors !default
         font-size: $size-medium
       &.is-large ~ .icon
         font-size: $size-large
-    .icon
+    >.icon
       color: $input-icon-color
       height: $input-height
       pointer-events: none
